[project]
name = 'ai-search'
version = '1.0.0'
requires-python = ">= 3.8"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_search"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
