[project]
name = 'ai-search'
requires-python = ">= 3.8"
dynamic = ["dependencies", "version"]

[build-system]
requires = ["setuptools", "cython", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_search"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
